[package]
name = "farc"
version = "0.1.0"
authors = ["Waelwindows <waelwindows@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.1"
flate2 = "1.0.12"
enum_dispatch = { version = "*", git="https://gitlab.com/waelwindows9922/enum_dispatch.git" }
